--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Electric_Bill_Management"
         tools:targetApi="31">
         <activity
+            android:name=".IncreaseElectricPrice"
+            android:exported="false" />
+        <activity
+            android:name=".UpdateCustomer"
+            android:exported="false" />
+        <activity
             android:name=".AddCustomer"
             android:exported="false" />
         <activity
